# vibecoding-dtmf

./: CLAUDE.md  README.md  main.py  pyproject.toml
docs/: BACKLOG.md  PRD.md  STATE.md  scope.md  techstack.md
docs/features/: audio-engine.md  keypad-ui.md
dtmf/: audio.py  ui.py
tests/: test_audio.py
